@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-34
-Date: 2011-08-15
+Version: 0.95-35
+Date: 2011-11-6
 Author: Martin Elff
 Maintainer: Martin Elff <melff@essex.ac.uk>
 Description: One of the aims of this package is to make life easier for
@@ -20,6 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/software/memisc/
-Packaged: 2011-10-05 18:02:42 UTC; elff
+Packaged: 2011-11-06 17:19:16 UTC; elff
 Repository: CRAN
-Date/Publication: 2011-10-06 08:46:36
+Date/Publication: 2011-11-07 14:05:27
